atualização do backend. implimentação de manipulação da tabela fe

--- a/book-samsys-fe/src/components/Livros/livros-style.css
+++ b/book-samsys-fe/src/components/Livros/livros-style.css
@@ -3,9 +3,9 @@
   display: flexbox;
   text-align: center;
 }
-
 .btn-wrapper {
-  display: inline-flex;
+display:flex;
+height: 37.6px;
 }
 .space-between{
   margin-left: 2px;
